--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@ div.container{
 	margin-top: 15px;
 }
 
-img.trashIcon {
-	width: 20px;
+#listSection, #textSection{
+	display: none;
+}
+
+.listButton {
+	margin-top: 5px;	
 }
